Checkout and other pages horizontal scrollbar fix

--- a/upload/catalog/view/theme/default/stylesheet/multiseller.css
+++ b/upload/catalog/view/theme/default/stylesheet/multiseller.css
@@ -11,7 +11,7 @@
 }
 
 #content .buttons {
-	width: 100%;
+	width: 98%;
 	margin-top: 10px;
 	display: inline-block;
 }
